; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_eeprom_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_eeprom_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ural_softc = type { i32 }
%struct.usb_device_request = type { i32, i32, i32, i32, i32 }

@UT_READ_VENDOR_DEVICE = common dso_local global i32 0, align 4
@RAL_READ_EEPROM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"could not read EEPROM: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ural_softc*, i32, i8*, i32)* @ural_eeprom_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ural_eeprom_read(%struct.ural_softc* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.ural_softc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.usb_device_request, align 4
  %10 = alloca i64, align 8
  store %struct.ural_softc* %0, %struct.ural_softc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @UT_READ_VENDOR_DEVICE, align 4
  %12 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 4
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @RAL_READ_EEPROM, align 4
  %14 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 3
  store i32 %13, i32* %14, align 4
  %15 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @USETW(i32 %16, i32 0)
  %18 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @USETW(i32 %19, i32 %20)
  %22 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %9, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @USETW(i32 %23, i32 %24)
  %26 = load %struct.ural_softc*, %struct.ural_softc** %5, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i64 @ural_do_request(%struct.ural_softc* %26, %struct.usb_device_request* %9, i8* %27)
  store i64 %28, i64* %10, align 8
  %29 = load i64, i64* %10, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %38

31:                                               ; preds = %4
  %32 = load %struct.ural_softc*, %struct.ural_softc** %5, align 8
  %33 = getelementptr inbounds %struct.ural_softc, %struct.ural_softc* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i64, i64* %10, align 8
  %36 = call i32 @usbd_errstr(i64 %35)
  %37 = call i32 @device_printf(i32 %34, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %36)
  br label %38

38:                                               ; preds = %31, %4
  ret void
}

declare dso_local i32 @USETW(i32, i32) #1

declare dso_local i64 @ural_do_request(%struct.ural_softc*, %struct.usb_device_request*, i8*) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1

declare dso_local i32 @usbd_errstr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
